# loc

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: publish.yml
src/: cache.rs  error.rs  github.rs  inflight.rs  locs.rs  main.rs
src/platform/: bitbucket.rs  codeberg.rs  github.rs  gitlab.rs  mod.rs
